--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ faker>=22.0.0
 plotly>=5.18.0
 pyarrow>=15.0.0
 watchdog>=4.0.0  # For real-time file monitoring
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
