--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ watchdog>=4.0.0  # For real-time file monitoring
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 psutil>=1.31.0
+openai==2.20.0  # For Text-to-SQL AI Analyst
+python-dotenv==1.2.1  # For loading .env file
